<resources>
    <string name="app_name">GestionClient2026SNI2</string>
    <string name="add_client_form_lastname">Nom</string>
    <string name="add_client_form_button">Ajouter</string>
    <string name="add_client_form_gender">Sexe</string>
    <string name="man">Homme</string>
    <string name="woman">Femme</string>
    <string name="add_client_form_age">Age</string>
    <string name="add_client_button">Ajouter un client</string>
    <string name="list_clients_button">Lister les clients</string>
</resources>